@@ -1,4 +1,7 @@
 # Generated by h2py from /usr/include/errno.h
+from warnings import warnpy3k
+warnpy3k("the ERRNO module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 # Included from sys/errno.h
 
